Implemented #419: Support multiple featured series in home feed API
